# ehr-data-quality-checker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  app.json  docker-compose.yml  ehr_checker.py  fly.toml  heroku.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml  publish.yml
app/: __init__.py  cli.py  config.py  main.py  models.py  services.py  store.py
app/engine/: __init__.py  checker.py  profiles.py  report.py  rules.py
app/ingest/: __init__.py  fhir.py  hl7v2.py
app/static/: app.js  index.html  styles.css
deploy/huggingface/: README.md  SETUP.md
docs/: api.md  deployment.md  usage.md
docs/blog/: finding-32-bugs-in-clean-healthcare-data.md
sample_data/: make_dirty.py
sample_data/dirty/: billing.csv  departments.csv  diagnoses.csv  encounters.csv  patients.csv  prescriptions.csv  procedures.csv  providers.csv
sample_data/fhir/: make_fhir_sample.py  sample_bundle.json
sample_data/hl7/: make_hl7_sample.py  sample_adt.hl7
tests/: conftest.py  test_api.py  test_ehr_checker.py  test_engine.py  test_ingest.py  test_store.py
tools/: synthea.md  synthea_to_report.py
